--- a/Breast_Cancer_Prediction.ipynb
+++ b/Breast_Cancer_Prediction.ipynb
@@ -31,10 +31,9 @@
     "\n",
     "In the last few years, Machine Learning has been bringing revolutionary change in the field of  cancer diagnosis. Whether the disease be in very initial stage or in the late stage, ML techniques could  map the symptoms and their stages to the diagnosis of disease. This system is called Computer-Aided Detection (CADe) or computer-aided diagnosis (CADx) and is based on Digital imaging and Radiology. Such systems are used in addition to the human evaluation of the diagnosis. These system  helps doctors to take decisions swiftly with  improved  accuracy of radiologists with a reduction of time in the interpretation of images.  \n",
     "\n",
-    " Generally, ultrasound CADs system for breast cancer detection involves four stages, 1. Image preprocessing 2. Image Segmentation 3. Feature Extraction 4. Classification.  In this provided dataset, the data is already classified and  each column of the dataset represents the feature of the tumorous tissue and each row represents each instances. \n",
+    "Generally, ultrasound CADs system for breast cancer detection involves four stages, 1. Image preprocessing 2. Image Segmentation 3. Feature Extraction 4. Classification.  In this provided dataset, the data is already classified and  each column of the dataset represents the feature of the tumorous tissue and each row represents each instances. \n",
     " \n",
-    "Here, we use Machine learning algorithms to identify the set of categories a new observations map to on the basis of a training set of data which contain labelled categories. This explores the construction and study of algorithms that can learn from and make predictions on data. Using this dataset in the classifier, objective is to identify whether the breast cancer diagnosis is benign or malignant.\n",
-    "This dataset is taken from https://archive.ics.uci.edu/ml/datasets/Breast+Cancer+Wisconsin+%28Diagnostic%29\n",
+    "Here, we use Machine learning algorithms to identify the set of categories a new observations map to on the basis of a training set of data which contain labelled categories. This explores the construction and study of algorithms that can learn from and make predictions on data. Using this dataset in the classifier, objective is to identify whether the breast cancer diagnosis is benign or malignant. This dataset is taken from https://archive.ics.uci.edu/ml/datasets/Breast+Cancer+Wisconsin+%28Diagnostic%29\n",
     "\n",
     "The breast cancer database was obtained from the University of Wisconsin Hospital and it contains 569 instances and 32 variables.  \n",
     "\n",
@@ -2032,13 +2031,6 @@
     "## Summary:\n",
     "In machine learning our goal is to minimize Type I (FP) and Type II errors(FN).In an ideal case, a perfect model should have none of these errors. However this is not possible in real world and we have to balance between precision and recall. Even though, in the models we have tested, Accuracy was 97% in both Random Forest and Logistic Regression, Logistic Regression was choosen as a best model because of its better Recall value. Still, there were 2 False negative predictions in our best prediction which was lower than in Random Forest. In this scenario, we prefer a model which would minimize false negatives hence helping us to not miss cancers which require intensive treatment as soon as they are diagnosed. With our Logistic Regression we had 97% accuracy and 96% recall. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
