--- a/Breast_Cancer_Prediction.ipynb
+++ b/Breast_Cancer_Prediction.ipynb
@@ -1292,8 +1292,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we are comparing all the variables in the dataset, we are finding higher number of features are correlated. \n",
-    "There are some correlated variables. And we are dropping :['perimeter_mean', 'area_mean', 'perimeter_se', 'area_se', 'radius_worst', 'perimeter_worst', 'area_worst']"
+    "As we were comparing all the variables in the dataset, we  found  several features were correlated. \n",
+    "These were some correlated variables. And we dropped :['perimeter_mean', 'area_mean', 'perimeter_se', 'area_se', 'radius_worst', 'perimeter_worst', 'area_worst']."
    ]
   },
   {
