--- a/Breast_Cancer_Prediction.ipynb
+++ b/Breast_Cancer_Prediction.ipynb
@@ -40,26 +40,33 @@
     "Attribute Information:\n",
     "\n",
     "1) ID number\n",
+    "\n",
     "2) Diagnosis (M = malignant, B = benign)\n",
     "3-32)\n",
     "\n",
     "Ten real-valued features are computed for each cell nucleus:\n",
     "\n",
-    "a) radius (mean of distances from center to points on the perimeter)\n",
-    "b) texture (standard deviation of gray-scale values)\n",
-    "c) perimeter\n",
-    "d) area\n",
-    "e) smoothness (local variation in radius lengths)\n",
-    "f) compactness (perimeter^2 / area - 1.0)\n",
-    "g) concavity (severity of concave portions of the contour)\n",
-    "h) concave points (number of concave portions of the contour)\n",
-    "i) symmetry\n",
-    "j) fractal dimension (\"coastline approximation\" - 1)\n",
+    " a) radius (mean of distances from center to points on the perimeter)\n",
+    " \n",
+    " b) texture (standard deviation of gray-scale values)\n",
+    " \n",
+    " c) perimeter\n",
+    " \n",
+    " d) area\n",
+    " \n",
+    " e) smoothness (local variation in radius lengths)\n",
+    " \n",
+    " f) compactness (perimeter^2 / area - 1.0)\n",
+    " \n",
+    " g) concavity (severity of concave portions of the contour)\n",
+    " \n",
+    " h) concave points (number of concave portions of the contour)\n",
+    " \n",
+    " i) symmetry\n",
+    " \n",
+    " j) fractal dimension (\"coastline approximation\" - 1)\n",
     "\n",
-    "The mean, standard error, and \"worst\" or largest (mean of the three\n",
-    "largest values) of these features were computed for each image,\n",
-    "resulting in 30 features.  For example, field 3 is Mean Radius, field\n",
-    "13 is Radius SE, field 23 is Worst Radius.\n"
+    "The mean, standard error, and \"worst\" or largest (mean of the three largest values) of these features were computed for each image, resulting in 30 features.  For example, field 3 is Mean Radius, field 13 is Radius SE, field 23 is Worst Radius.\n"
    ]
   },
   {
